--- a/misc/test-scenario/app/views/devise/registrations/new.html.erb
+++ b/misc/test-scenario/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,20 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), data: {remote: 'user'}, html: {'ng-controller' => 'RemoteFormCtrl'}) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= f.email_field :email, :autofocus => true, 'ng-model' => 'user.email' %></div>
 
   <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <%= f.password_field :password, 'ng-model' => 'user.password' %></div>
 
   <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <%= f.password_field :password_confirmation, 'ng-model' => 'user.password_confirmation' %></div>
 
   <div><%= f.submit "Sign up" %></div>
+
+  <div> {{ success }} </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
