test(method): add scenario for method directive

--- a/misc/test-scenario/app/views/devise/registrations/new.html.erb
+++ b/misc/test-scenario/app/views/devise/registrations/new.html.erb
@@ -18,3 +18,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<%= link_to 'Sign Out', destroy_user_session_path, id: 'sign_out', data: {method: :delete} %>
