fix(confirm): deny default action only when dismiss confirm

--- a/misc/test-scenario/app/views/home/index.html.erb
+++ b/misc/test-scenario/app/views/home/index.html.erb
@@ -6,3 +6,5 @@
 
   <div> {{ success }} </div>
 </div>
+
+<%= link_to 'Greet', new_user_session_path, id: 'hello_world', data: {confirm: 'Hello World'} %>
