--- a/misc/test-scenario/app/views/home/index.html.erb
+++ b/misc/test-scenario/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
 <h1 id="home_index">Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
+<a href=<%= new_user_session_path %> id="sign_in" confirm="Sign In??">Sign In</a>
+
+<%= link_to 'Greet', new_user_registration_path, id: 'hello_world', data: {confirm: 'Hello World'} %>
+
 <div ng-controller="RemoteFormCtrl">
   <%= link_to 'Together', home_together_path, id: 'work_together', data: {method: :put, remote: true, confirm: 'Lets GO!'}%>
 
   <div> {{ success }} </div>
 </div>
-
-<%= link_to 'Greet', new_user_session_path, id: 'hello_world', data: {confirm: 'Hello World'} %>
