chore(subtree): merge tomchentw/tc-ng-boilerplate@e4f805d
Conflicts:
  .gitignore
  .travis.yml
  CHANGELOG.md
  Gemfile
  Makefile
  README.md
  bower.json
  client/gulpfile.ls
  client/index.ls
  client/javascripts/application.ls
  client/stylesheets/_bootstrap.scss
  client/stylesheets/application.scss
  client/views/index.jade
  config/port.ls
  index.ls
  package.json
  server/index.ls
  test/karma.js
  test/protractor.js

--- a/client/stylesheets/_bootstrap.scss
+++ b/client/stylesheets/_bootstrap.scss
@@ -1,3 +1,8 @@
+/*
+ * Keep this file in sync with 
+ * https://github.com/twbs/bootstrap-sass/blob/master/vendor/assets/stylesheets/bootstrap.scss
+ * current version: 3.1.1
+ */
 // Core variables and mixins
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
