--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -5,7 +5,9 @@ html(ng-app="demo")
     base(href="/")
     title angular-ujs
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0")
-    link(rel="stylesheet" href="/application.css")
-    script(type="text/javascript" defer src="/application.js")
+    link(rel="stylesheet" href=stylesheetLinkTag("application.css"))
+    script(type="text/javascript" defer src=javascriptIncludeTag("application.js"))
   body
+    include partials/header
     h1 angular-ujs
+    include partials/footer
