--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -1,2 +1,7 @@
+$icon-font-path: 'http://netdna.bootstrapcdn.com/bootstrap/3.0.0/fonts/';
+
 @import "bootstrap";
+@import "footer";
+
+body { padding-top: 70px; }
 
