--- a/client/views/partials/header.jade
+++ b/client/views/partials/header.jade
@@ -1,4 +1,4 @@
-header.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+header.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
   .container
     .navbar-header
       button.navbar-toggle(type="button" ng-click="isCollapse = !isCollapse")
@@ -6,4 +6,4 @@ header.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href="https://github.com/tomchentw/angular-ujs" target="_blank") angular-ujs
+      a.navbar-brand(ga href="https://github.com/tomchentw/angular-ujs" target="_blank") angular-ujs
